--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -44,5 +44,10 @@
     },
     "[json]": {
         "editor.defaultFormatter": "vscode.json-language-features"
-    }
+    },
+    "[html]": {
+        "editor.defaultFormatter": "vscode.html-language-features"
+    },
+    "editor.minimap.enabled": false,
+    "workbench.statusBar.visible": true
 }
