--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -12,7 +12,7 @@
     "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
     "terminal.explorerKind": "external",
     "java.jdt.ls.vmargs": "-XX:+UseParallelGC -XX:GCTimeRatio=4 -XX:AdaptiveSizePolicyWeight=90 -Dsun.zip.disableMemoryMapping=true -Xmx1G -Xms100m -javaagent:\"/Users/johansson044/.vscode/extensions/gabrielbb.vscode-lombok-1.0.1/server/lombok.jar\"",
-    "workbench.colorTheme": "Solarized Dark",
+    "workbench.colorTheme": "Default Light+",
     "editor.accessibilitySupport": "off",
     "java.project.importOnFirstTimeStartup": "automatic",
     "workbench.activityBar.visible": true,
