--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1,40 +1,42 @@
 {
-   "vscode-neovim.neovimExecutablePaths.darwin":"/usr/local/bin/nvim",
-    "files.exclude": {
-        "**/.classpath": true,
-        "**/.project": true,
-        "**/.settings": true,
-        "**/.factorypath": true
-    },
-    "editor.suggestSelection": "first",
-    "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
-    "terminal.explorerKind": "external",
-    "java.jdt.ls.vmargs": "-XX:+UseParallelGC -XX:GCTimeRatio=4 -XX:AdaptiveSizePolicyWeight=90 -Dsun.zip.disableMemoryMapping=true -Xmx1G -Xms100m -javaagent:\"/Users/johansson044/.vscode/extensions/gabrielbb.vscode-lombok-1.0.1/server/lombok.jar\"",
-    "workbench.colorTheme": "Solarized Dark",
-    "editor.accessibilitySupport": "off",
-    "java.project.importOnFirstTimeStartup": "automatic",
-    "workbench.activityBar.visible": true,
-    "[typescriptreact]": {
-        "editor.defaultFormatter": "esbenp.prettier-vscode"
-    },
-    "[javascript]": {
-        "editor.defaultFormatter": "esbenp.prettier-vscode"
-    },
-    "[jsonc]": {
-        "editor.defaultFormatter": "vscode.json-language-features"
-    },
-
-    "[typescript]": {
-        "editor.defaultFormatter": "esbenp.prettier-vscode"
-    },
-    "[json]": {
-        "editor.defaultFormatter": "vscode.json-language-features"
-    },
-    "[html]": {
-        "editor.defaultFormatter": "vscode.html-language-features"
-    },
-    "editor.minimap.enabled": false,
-    "workbench.statusBar.visible": true,
-    "security.workspace.trust.untrustedFiles": "open",
-    "vscode-neovim.neovimInitVimPaths.darwin": "/Users/johansson044/.dotfiles/config/nvim/init.vim"
+  "terminal.explorerKind" : "external",
+  "security.workspace.trust.untrustedFiles" : "open",
+  "[json]" : {
+    "editor.defaultFormatter" : "vscode.json-language-features"
+  },
+  "workbench.colorTheme" : "Visual Studio Light",
+  "files.exclude" : {
+    "**\/.project" : true,
+    "**\/.settings" : true,
+    "**\/.classpath" : true,
+    "**\/.factorypath" : true
+  },
+  "vscode-neovim.neovimExecutablePaths.darwin" : "\/usr\/local\/bin\/nvim",
+  "vscode-neovim.neovimInitVimPaths.darwin" : "\/Users\/johansson044\/.dotfiles\/config\/nvim\/init.vim",
+  "vsintellicode.modify.editor.suggestSelection" : "automaticallyOverrodeDefaultValue",
+  "[jsonc]" : {
+    "editor.defaultFormatter" : "vscode.json-language-features"
+  },
+  "editor.accessibilitySupport" : "off",
+  "java.project.importOnFirstTimeStartup" : "automatic",
+  "[javascript]" : {
+    "editor.defaultFormatter" : "esbenp.prettier-vscode"
+  },
+  "java.jdt.ls.vmargs" : "-XX:+UseParallelGC -XX:GCTimeRatio=4 -XX:AdaptiveSizePolicyWeight=90 -Dsun.zip.disableMemoryMapping=true -Xmx1G -Xms100m -javaagent:\"\/Users\/johansson044\/.vscode\/extensions\/gabrielbb.vscode-lombok-1.0.1\/server\/lombok.jar\"",
+  "[html]" : {
+    "editor.defaultFormatter" : "vscode.html-language-features"
+  },
+  "editor.suggestSelection" : "first",
+  "workbench.activityBar.visible" : true,
+  "workbench.statusBar.visible" : true,
+  "[typescript]" : {
+    "editor.defaultFormatter" : "esbenp.prettier-vscode"
+  },
+  "editor.minimap.enabled" : false,
+  "[typescriptreact]" : {
+    "editor.defaultFormatter" : "esbenp.prettier-vscode"
+  },
+  "terminal.integrated.env.osx": {
+    "FIG_NEW_SESSION": "1"
+  }
 }
